[package]
name = "oj-gitlab-middleware"
version = "0.1.0"
authors = ["temp"]

[dependencies]
rocket = "0.4.0"
mysql = "~15.0.0"
reqwest = "~0.9.5"
url = "~1.7.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sha2 = "0.8.0"
hex = "0.3.2"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["mysql_pool","json"]