[package]
name = "oj-gitlab-middleware"
version = "0.1.0"
authors = ["temp"]

[dependencies]
rocket = "0.4"
#mysql = "15.0"
reqwest = "0.9"
percent-encoding = "~1.0"
url = "1.7"
log4rs = "0.8.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sha2 = "0.8"
hex = "0.3"
uuid = {version= "0.7", features = ["serde"] }

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["mysql_pool","json"]