[package]
name = "oj-gitlab-middleware"
version = "0.1.1"
authors = ["llk89"]

[dependencies]
rocket = "0.4"
reqwest = "0.9"
percent-encoding = "~1.0"
url = "1.7"
log = "~0.4"
log4rs = "0.8.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sha2 = "0.8"
hex = "0.3"
uuid = {version= "0.7", features = ["serde"] }
time = "0.1"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["mysql_pool","json"]